SRTFetcher memory histograms should not use LinearHistogram.

BUG=651903

Review-Url: https://codereview.chromium.org/2388223002
Cr-Commit-Position: refs/heads/master@{#422507}

Former-commit-id: 6a82522ca23a533cf581ecb4d8b005c4d5cdfb77